--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/SebasDrewes/restaurant-page#readme",
   "devDependencies": {
-    "webpack": "^5.37.1",
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.5",
+    "babel-loader": "^8.2.2",
+    "webpack": "^5.39.1",
     "webpack-cli": "^4.7.0"
   },
   "dependencies": {
